--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.3",
     "@tailwindcss/forms": "^0.3.3",
     "next": "11.0.1",
     "react": "17.0.2",
